--- a/portfolio-styles.css
+++ b/portfolio-styles.css
@@ -10,13 +10,17 @@ p, div, a, span {
 .id-card .wrapper {
     width: 30%;
 }
+.id-card .outer {
+    filter: drop-shadow(-1px 6px 3px rgba(0, 0, 0, 0.5));
+}
 .id-card .inner {
   display: inline-block;
   width: 100%;
-  border: 1px solid #cecece;
-  border-radius: 30px;
   text-align: center;
-}
+  height: auto;
+  overflow: hidden;
+  background: white;
+clip-path: polygon(0% 100%, 5% 95%, 10% 100%, 15% 95%, 20% 100%, 25% 95%, 30% 100%, 35% 95%, 40% 100%, 45% 95%, 50% 100%, 55% 95%, 60% 100%, 65% 95%, 70% 100%, 75% 95%, 80% 100%, 85% 95%, 90% 100%, 95% 95%, 100% 100%, 100% 0%, 0% 0%);}
 .id-card .logo img {
     max-width: 60%;
     margin-top: 5%;
@@ -41,4 +45,7 @@ p, div, a, span {
 }
 .id-card p {
     font-size: large;
+}
+.id-card p:last-of-type {
+    padding-bottom: 5%
 }
