--- a/portfolio-styles.css
+++ b/portfolio-styles.css
@@ -2,6 +2,9 @@
 p, div, a, span {
   font-family: Inconsolata;
 }
+p {
+    margin: 0.5em 1em;
+}
 .id-card.area {
   display: inline-block;
   max-width: 100%;
@@ -47,5 +50,5 @@ clip-path: polygon(0% 100%, 5% 95%, 10% 100%, 15% 95%, 20% 100%, 25% 95%, 30% 10
     font-size: large;
 }
 .id-card p:last-of-type {
-    padding-bottom: 5%
+    padding-bottom: 10%
 }
